# problem-solving

./: .gitignore  Hackerrank.sln  README.md
cpp/: .clang-format  CMakeLists.txt  input  input.txt  output.txt  run-raw.sh  run.sh
cpp/advent-of-code/: aoc-common.hpp
cpp/advent-of-code/2023/: day-01.cpp  day-02.cpp  day-03.cpp  day-04.cpp  day-05.cpp  day-06.cpp  day-07.cpp  day-08.cpp  day-09.cpp  day-10.cpp  day-11.cpp  day-12.cpp  day-13.cpp  day-14.cpp  day-15.cpp  day-16.cpp  day-17.cpp  day-18.cpp  day-19.cpp  day-20.cpp
cpp/codeforces/: gamer-hemose.cpp  playground.cpp
cpp/common/: binary-search.cpp  fenwick-tree.hpp
cpp/fb/: consistency-chapter2.cpp  gold-mine-chapter2.cpp
cpp/fb/qualitifcation/: chapter1-xs-and-os.cpp  chapter1.cpp  gold-mine-chapter1.cpp
cpp/fb/round1/: chapter1.cpp  chapter2 copy.cpp  chapter2.cpp  chapter3.cpp
cpp/hackerrank/: CMakeLists.txt  cloudy-day.cpp  construct-the-array.cpp  gaming_array.cpp  maximum-palindromes.cpp  newyear-game.cpp  prime-xor.cpp  red-knights-shortest-path.cpp  roads-in-hackerland.cpp  stone-division-2.cpp  synchronous-shopping.cpp  utils.cpp  utils.hpp  winning-lottery-ticket.cpp
cpp/leetcode/: 3sum.cpp  advent-of-code.c  advent-of-code.cpp  basic-calculator.cpp  benchmark.hpp  cherry-pickup.cpp  common.hpp  construct-binary-tree-from-preorder-and-inorder-traversal.cpp  contain-virus.cpp  container-with-most-water.cpp  design-bitset.cpp  distinct-echo-substrings.cpp  encrypt-and-decrypt-strings.cpp  generate-parentheses.cpp  greatest-sum-divisible-by-three.cpp  jump-game-iii.cpp  jump-game-iv.cpp  jump-game-vi.cpp  jump-game-vii.cpp  jump-game.cpp  lfu-cache.cpp  local-stuff.hpp  longest-substring-without-repeating-characters.cpp  longest-word-in-dictionary.cpp  lru-cache.cpp  matchsticks-to-square.cpp  max-area-of-island.cpp  merge-k-sorted-lists.cpp  multiply-strings.cpp  my-calendar.cpp  n-queens.cpp  number-of-valid-move-combinations-on-chessboard.cpp  parse-lisp-expression.cpp  path-sum-ii.cpp  path-sum-iii.cpp  playground.cpp  regular-expression-matching.cpp  reorder-routes-to-make-all-paths-lead-to-the-city-zero.cpp  replace-words.cpp  roman-to-integer.cpp  (+13 more)
cpp/leetcode/common/: rolling-hash.hpp  segment-tree.hpp  trie.hpp  union-find.hpp
cpp/other/: fft.hpp
cpp/playground/: test.cpp
(+240 files in other folders)
